# nchatview

./: README.md  pyproject.toml
src/nchatview/: __init__.py  __main__.py  audioplayer.py  mdview.py  pdfview.py
src/nchatview.dist-info/: METADATA  top_level.txt
src/nchatview.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
