[build-system]
requires = ["setuptools>=65.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nchatview"
version = "0.1.0"
authors = [
    { name = "Engon Ken Morel", email = "engonken8@gmail.com" },
]
description = "A Python utility to open nchat message attachments from the command line"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["cli", "attachments", "nchat"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Utilities",
]
dependencies = [
    "textual>=0.52.1",
    "sounddevice>=0.4.6",
    "soundfile>=0.12.1",
    "numpy>=1.24.0",
    "comberload>=0.1.0",
    "sixel>=0.1.2",
]

[project.urls]
Repository = "https://github.com/ken-morel/nchatview"
"Bug Tracker" = "https://github.com/ken-morel/nchatview/issues"

[project.scripts]
nchatview = "nchatview:main"

[tool.briefcase]
project_name = "nchatview"
bundle = "com.github.ken-morel"
version = "0.0.1"
url = "https://github.com/ken-morel/nchatview"
license.file = "LICENSE"
author = "Engon Ken Morel"
author_email = "engonken8@gmail.com"

[tool.briefcase.app.nchatview]
formal_name = "nchat attachment viewer"
description = "A Python utility to open nchat message attachments from the command line"
long_description = """Easily dodges between applications depending on file type to open in appropriate app possibly on terminal."""
sources = [
    "src/nchatview",
]
test_sources = [
    "tests",
]
console_app = true

requires = [
    "textual>=0.52.1",
    "sounddevice>=0.4.6",
    "soundfile>=0.12.1",
    "numpy>=1.24.0",
    "comberload>=0.1.0",
    "sixel>=0.1.2",
]

test_requires = [
    "pytest>=7.0.0",
]

[tool.briefcase.app.nchatview.macOS]
universal_build = true
requires = [
    "textual>=0.52.1",
    "sounddevice>=0.4.6",
    "soundfile>=0.12.1",
    "numpy>=1.24.0",
    "comberload>=0.1.0",
    "sixel>=0.1.2",
]

[tool.briefcase.app.nchatview.linux]
requires = [
    "textual>=0.52.1",
    "sounddevice>=0.4.6",
    "soundfile>=0.12.1",
    "numpy>=1.24.0",
    "comberload>=0.1.0",
    "sixel>=0.1.2",
]

[tool.briefcase.app.nchatview.linux.system.debian]
system_requires = [
    "libportaudio2",
    "libsndfile1",
    "ffmpeg",
]
system_runtime_requires = [
    "libportaudio2",
    "libsndfile1",
    "ffmpeg",
]

[tool.briefcase.app.nchatview.linux.system.rhel]
system_requires = [
    "portaudio",
    "libsndfile",
    "ffmpeg",
]
system_runtime_requires = [
    "portaudio",
    "libsndfile",
    "ffmpeg",
]

[tool.briefcase.app.nchatview.linux.system.suse]
system_requires = [
    "portaudio-devel",
    "libsndfile",
    "ffmpeg",
]
system_runtime_requires = [
    "portaudio-devel",
    "libsndfile",
    "ffmpeg",
]

[tool.briefcase.app.nchatview.linux.system.arch]
system_requires = [
    "portaudio",
    "libsndfile",
    "ffmpeg",
]
system_runtime_requires = [
    "portaudio",
    "libsndfile",
    "ffmpeg",
]

[tool.briefcase.app.nchatview.linux.flatpak]
flatpak_runtime = "org.freedesktop.Platform"
flatpak_runtime_version = "24.08"
flatpak_sdk = "org.freedesktop.Sdk"

[tool.briefcase.app.nchatview.windows]
requires = [
    "textual>=0.52.1",
    "sounddevice>=0.4.6",
    "soundfile>=0.12.1",
    "numpy>=1.24.0",
    "comberload>=0.1.0",
    "sixel>=0.1.2",
]

[tool.briefcase.app.nchatview.iOS]
requires = [
    # iOS may have limited support for these packages
]

[tool.briefcase.app.nchatview.android]
requires = [
    # Android may have limited support for these packages
]

[tool.briefcase.app.nchatview.web]
requires = [
    # Web may have limited support for these packages
]
